stylat till lite placeholer och spar knappen.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div id="form">
         <form>
-            <input class="todo-input" type="text" placeholder="Add a task.">
-            <button class="todo-btn" type="submit">I Got This!</button>
+            <input class="todo-input" type="text" placeholder="Vad ska göras?">
+            <button class="todo-btn" type="submit">Spara</button>
         </form>
     </div>
 </body>
