styling av ListItems är klart

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="jsc.js" defer></script>
+    <link rel="stylesheet" href="./stylish.css">
+    <script src="BackEnd.js" defer></script>
 </head>
 <header>
     <h1>Just do it!</h1>
 </header>
+
 <body>
     <div id="form">
         <form>
             <input class="todo-input" type="text" placeholder="Vad ska göras?">
             <button class="todo-btn" type="submit">Spara</button>
         </form>
+        <ul id="todoList">
+            <li class="todoItem">sdfsdfa</li>
+            <li class="todoItem">sdfsdfa</li>
+        </ul>
     </div>
-    
 </body>
+
 </html>
