add element ska fixas!

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 <body>
     <div id="form">
         <form>
-            <input class="todo-input" type="text" placeholder="Vad ska göras?">
-            <button class="todo-btn" type="submit">Spara</button>
+            <input class="todo-input" id="input" type="text" placeholder="Vad ska göras?">
+            <button id="addBtn" class="todo-btn" type="submit">Spara</button>
         </form>
         <ul id="todoList">
-            <li class="todoItem">sdfsdfa</li>
-            <li class="todoItem">sdfsdfa</li>
+            <li id="item" class="todoItem"></li>
         </ul>
     </div>
 </body>
