lägg till input i listan är klart!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id="addBtn" class="todo-btn" type="submit">Spara</button>
         </form>
         <ul id="todoList">
-            <li id="item" class="todoItem"></li>
+            <p id="item" class="todoItem"></p>
         </ul>
     </div>
 </body>
