--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id="addBtn" class="todo-btn" type="submit">Spara</button>
         </form>
         <ul id="todoList">
-            <p id="item" class="todoItem"></p>
+            <li id="item" class="todoItem"></li>
         </ul>
     </div>
 </body>
