--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 
 <body>
     <div id="form">
+        <!--här ska inputfält och spar knappen vara-->
         <form>
             <input class="todo-input" id="input" type="text" placeholder="Vad ska göras?">
             <button id="addBtn" class="todo-btn" type="submit">Spara</button>
         </form>
-        <ul id="todoList">
-            <!--<li id="item" class="todoItem"></li>-->
+        <div id="editBox">
+            <button id="Edit">Edit</button>
+            <button id="Select">Select</button>
+        </div>
+        <!--här ska ToDo listan vara-->
+        <ul id="todoList"></ul>
+            <!--Här ska gnreras dynamisk input från användaren sedan läggs till här-->
         </ul>
     </div>
 </body>
