--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <button id="Edit">Edit</button>
             <button id="Select">Select</button>
         </div>
+        <!-- Här skapas följade kodblock dynamisk, när addBtn trycks:
+         <ul type="lisBox" class="listBox">
+            här ska genereras li element per klick också och det ska innehålla text från input och doneBtn samt tabortBtn.
+         </ul>
+        -->
     </div>
 </body>
 
