Text pushes the button out side the element. ska fixas!!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>ToDoList</title>
     <link rel="stylesheet" href="./stylish.css">
     <script src="BackEnd.js" defer></script>
-</head>
+    <!--Här länkar jag min icon källan till mina icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <header>
     <h1>Just do it!</h1>
 </header>
