added hover effect to buttons!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="form">
         <!--här ska inputfält och spar knappen vara-->
         <form>
-            <input class="todo-input" id="input" type="text" placeholder="Vad ska göras?">
+            <input class="todo-input" id="input" type="text" placeholder="Vad ska göras?", maxlength="30">
             <button id="addBtn" class="todo-btn" type="submit">Spara</button>
         </form>
         <div id="editBox">
