la till lyssnare på knabbar i li element med funtion till att ta bort och stryckning på input value.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Här länkar jag min icon källan till mina icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <header>
-    <h1>Just do it!</h1>
+    <h1>Let's Do This!</h1>
 </header>
 
 <body>
