Error medelande är skapat.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="BackEnd.js" defer></script>
     <!--Här länkar jag min icon källan till mina icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-<header>
-    <h1>Let's Do This!</h1>
+<header id="headTitle">
+    <h1 id="titleText">Let's Do This!</h1>
 </header>
 <body>
     <div id="form">
