Fel medelandet har fått mer kondition nu.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="form">
         <!--här ska inputfält och spar knappen vara-->
         <form>
-            <input class="todo-input" id="input" type="text" placeholder="Vad ska göras?", maxlength="30">
+            <input class="todo-input" id="input" type="text" autocomplete="off" placeholder="Vad ska göras?", maxlength="30">
             <button id="addBtn" class="todo-btn" type="submit">Spara</button>
         </form>
         <!-- Här skapas följade kodblock dynamisk, när addBtn trycks:
