--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDoList</title>
+    <title>Kiko´s TodoList</title>
     <link rel="stylesheet" href="./stylish.css">
     <script src="BackEnd.js" defer></script>
     <!--Här länkar jag min icon källan till mina icons-->
